@@ -4,6 +4,7 @@ sunuo (0.4.1) unstable; urgency=low
     - eliminated most DateTime.Now calls
     - all other DateTime.Now calls are converted to DateTime.UtcNow to avoid
       time zone lookups
+    - reuse timer in spawner engine
   * lock m_Accounts in Accounting.Accounts
 
  --
